<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.web3d.x3d.tools</groupId>
    <artifactId>x3dedit</artifactId>
    <name>X3D-Edit</name>
    <description>X3D-Edit supports creation, authoring, validation and viewing of X3D graphics model files</description>
    <url>https://github.com/Web3DConsortium/X3D-Edit/</url>
    <inceptionYear>1999</inceptionYear>
    <version>4.0.38</version>
    <!-- maven requires "nbm" even though netbeans-mediated maven schema quacks -->
    <packaging>nbm</packaging>
    <organization>
        <name>Web3D Consortium</name>
        <url>https://www.web3d.org/</url>
    </organization>
    <developers>
        <developer>
            <id>brutzman</id>
            <name>Don Brutzman, Ph.D.</name>
            <email>brutzman@nps.edu</email>
            <organization>MOVES Institute</organization>
            <organizationUrl>https://my.nps.edu/web/moves/</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>Terry D. Norbraten</name>
            <email>terry.norbraten@gmail.com</email>
            <organization>Retired</organization>
            <organizationUrl></organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>Mike Bailey</name>
            <email>mike@blueoak.com</email>
            <organization>Retired</organization>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>license.txt</name>
            <url>https://github.com/Web3DConsortium/X3D-Edit/blob/master/license.txt</url>
            <distribution>repo</distribution>
            <comments>A non-viral, business friendly, BSD Style license</comments>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com:Web3DConsortium/X3D-Edit.git</connection>
        <developerConnection>scm:git:ssh://github.com:Web3DConsortium/X3D-Edit.git</developerConnection>
        <url>https://github.com/Web3DConsortium/X3D-Edit/tree/${project.scm.tag}/X3dSourceFilePalette/</url>
        <tag>master</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Web3DConsortium/X3D-Edit/issues</url>
    </issueManagement>
    <distributionManagement>
        <snapshotRepository>
            <id>central-snapshot</id>
            <name>Central Sonatype Snapshots</name>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>central</id>
            <name>Central Sonatype</name>
            <url>https://central.sonatype.com/</url>
        </repository>
        <site>
            <name>${project.name} Website</name>
            <url>https://savage.nps.edu/X3D-Edit/</url>
        </site>
        <downloadUrl>https://github.com/Web3DConsortium/X3D-Edit/</downloadUrl>
    </distributionManagement>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>18</maven.compiler.release>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>RELEASE250</version>
        </dependency>
        <!-- TODO: put all other module dependencies here. Mimic project.xml -->
        <!-- NOTE: Some dependencies like OpenDIS and Xj3D aren't in the central
                   repo and will have to be installed locally -->
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.7.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.netbeans.utilities</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <version>14.3</version>
                <extensions>true</extensions>
                <executions>
                <!-- TODO: Prep for total maven production of the NBM -->
<!--                    <execution>
                        <id>natives</id>
                        <phase>prepare-package</phase>
                        <configuration>
                            <nbmResource>
                                <directory>release/modules/lib</directory>
                                <targetPath>modules/lib</targetPath>
                                <includes>
                                    <include>**/*.dll</include>
                                    <include>**/*.so</include>
                                    <include>**/*.jnlib</include>
                                </includes>
                            </nbmResource>
                        </configuration>
                    </execution>-->
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>nbm</id>
                        <phase>package</phase>
                        <configuration>
                            <!-- Here is where we ask the Ant harness to build
                                 the NBM. CLI: mvn antrun:run@nbm -->
                            <target>
                                <ant antfile="${basedir}/build.xml">
                                    <target name="nbm"/>
                                </ant>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <useDefaultManifestFile>true</useDefaultManifestFile>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.7</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <!-- the same id as in settings.xml -->
                            <serverId>gpg</serverId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.9.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-changes-plugin</artifactId>
                <version>2.12.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>animal-sniffer-maven-plugin</artifactId>
                <version>1.24</version>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>index</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
</project>